# pyfabricate

./: .gitignore  .mypi.ini  README.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
developer/: Skeleton Project Creator.md  User Documentation.md  makeicn.sh  pyfabricate.bld
mage/: Mage.py
mage/resources/: back16.py  cancel16.py
pyfabricate/: ExternalCommands.py  MageAdapter.py  Platform.py  ProjectDetails.py  PyFabricate.py  PyFabricateApp.py  PyFabricateFrame.py  Settings.py  __init__.py
pyfabricate/fabrication/: FabricationError.py  Fabricator.py
pyfabricate/oswrapper/: CompletedData.py  ExternalCommands.py  InstallationChecker.py
pyfabricate/resources/: loggingConfiguration.json  pyfabricate.icns
pyfabricate/resources/images/: AppLogo.py
pyfabricate/resources/templates/: .envrc.template  .gitignore.template  .mypi.ini.template  README.md.template  createVirtualEnv.sh.template  loggingConfiguration.json.template  pyproject.toml.template
pyfabricate/steps/: ProjectDetailsStep.py  ProjectsBaseDirectoryPage.py  PythonVersionStep.py  Validator.py
src/mage/: Mage.py  MagePage.py
src/mage/resources/: MageBitMap.py  back64.py  cancel64.py  next16.py  next64.py
src/pyfabricate/: Constants.py  ExternalCommands.py  Fabricator.py  InstallationChecker.py  IntroductionPage.py  MageAdapter.py  ProjectDetails.py  ProjectDetailsPage.py  ProjectsBasePage.py  PyFabricateApp.py  PyFabricateFrame.py  PythonVersionPage.py  Settings.py
src/pyfabricate/components/: DirectorySelector.py
tests/: CustomWizard.py  PanelContainingSizedPanel.py  TestEmailValidator.py
tests/mage/: MageBase.py  MageIntroductionPage.py  MageProjectDetailsPage.py  MageProjectsBasePage.py  MagePythonVersionPage.py  MageTestApp.py  MageTestFrame.py
tests/pyfabricate/: TestExternalCommands.py  TestInstallationChecker.py
tests/resources/: testLoggingConfiguration.json
(+10 files in other folders)
