[build-system]
requires = ['setuptools', 'wheel']
build-backend = "setuptools.build_meta"

[project]
name='pyfabricate'
dynamic = ["version"]
description = 'Create an opinionated Python Project'
readme = "README.md"
license = {text = 'GNU AFFERO GENERAL PUBLIC LICENSE'}
authors = [{name = 'Humberto A. Sanchez II', email = 'Humberto.A.Sanchez.II@gmail.com'}]
maintainers = [{name = 'Humberto A. Sanchez II', email = 'Humberto.A.Sanchez.II@gmail.com'}]
keywords = ['PyChartm', 'opinionated', 'skeleton', 'python',]

dependencies = [
  'click>=8.1.7',
  'semantic-version>=2.10.0',
  'codeallybasic>=1.4.0',
  'wxPython==4.2.2',
]

[project.urls]
Repository = 'https://github.com/hasii2011/pyfabricate'


[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools.package-data]
'pyfabricate.resources' = ['loggingConfiguration.json']

[tool.setuptools.dynamic]
version = {attr = 'pyfabricate.__version__'}

[project.scripts]

pyfabricate = "pyfabricate.PyFabricate:commandHandler"
