[build-system]
requires = ['setuptools', 'wheel']
build-backend = "setuptools.build_meta"

[project]
name='$PROJECT_NAME'
dynamic = ["version"]
description = '$DESCRIPTION'
readme = "README.md"
license = {text = 'GNU AFFERO GENERAL PUBLIC LICENSE'}
authors = [{name = '$OWNER', email = '$OWNER_EMAIL'}]
maintainers = [{name = '$OWNER', email = '$OWNER_EMAIL'}]
keywords = ['$KEYWORDS',]

dependencies = [
  'codeallybasic>=1.4.0',
]

[project.urls]
Repository = 'https://github.com/hasii2011/$PROJECT_NAME'


[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools.package-data]
'$PROJECT_NAME.resources' = ['loggingConfiguration.json']

[tool.setuptools.dynamic]
version = {attr = '$PROJECT_NAME.__version__'}

[project.scripts]

pyfabricate = "$PROJECT_NAME.$MAINCLASS:commandHandler"
